changes sync with server